# PyTroch-Mastery-Hub

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docks.yml
docker/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.jupyter  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: Makefile  conf.py  index.rst  mkdocs.yml  requirements.txt
docs/development/: changelog.md  code_of_conduct.md  contributing.md
docs/docs/: contributing.md  examples.md  index.md  quickstart.md
docs/docs/api/: index.md  reference.md
docs/docs/assets/: custom.css
docs/getting_started/: installation.md  quickstart.md  tutorials.md
docs/notebooks/: 01_fundamentals.md  02_neural_networks.md  03_computer_vision.md  04_nlp.md  05_generative_models.md  06_optimization_deployment.md  capstone.md
examples/: README.md  __init__.py  basic_tensors.py  custom_autograd.py  data_augmentation.py  gan_training.py  knowledge_distillation.py  model_checkpointing.py  model_optimization.py  train_mnist.py  transfer_learning.py  transformer_text_classification.py
notebooks/01_fundamentals/: 01_introduction_to_tensors.ipynb  02_gradient_computation.ipynb  03_custom_autograd_functions.ipynb  04_backpropagation_visualization.ipynb
notebooks/02_neural_networks/: 05_mlp_from_scratch.ipynb  06_advanced_architectures.ipynb  07_training_techniques.ipynb
notebooks/03_computer_vision/: 08_cnn_fundamentals.ipynb  09_modern_cnn_architectures.ipynb  10_computer_vision_projects.ipynb
notebooks/04_natural_language_processing/: 11_rnn_lstm_fundamentals.ipynb  12_sequence_to_sequence.ipynb  13_sentiment_analysis_project.ipynb  14_transformer_from_scratch.ipynb
notebooks/05_generative_models/: 15_gan_fundamentals.ipynb  16_advanced_gans_vaes.ipynb
notebooks/06_optimization_deployment/: 17_model_optimization.ipynb  18_model_serving_apis.ipynb  19_monitoring_mlops.ipynb  20_cloud_deployment.ipynb
notebooks/07_advanced_projects/: 21_image_classification_project.ipynb  22_text_generation_project.ipynb  23_recommendation_system.ipynb
notebooks/08_advanced_topics/: 24_advanced_techniques.ipynb  25_research_applications.ipynb
notebooks/capstone_projects/: 26_Capstone_part1_multimodal_system.ipynb  27_Capstone_part2_production_mlops.ipynb
scripts/: download_datasets.py  lint_and_format.sh  run_all_notebooks.sh  setup_env.sh
src/: __init__.py
src/advanced/: __init__.py  deployment.py  gan_utils.py  optimization.py
src/computer_vision/: __init__.py  augmentation.py  datasets.py  models.py  transforms.py
src/fundamentals/: __init__.py  autograd_helpers.py  math_utils.py  tensor_ops.py
src/neural_networks/: __init__.py  layers.py  models.py  optimizers.py  training.py
src/nlp/: __init__.py  embeddings.py  models.py  text_utils.py  tokenization.py
src/utils/: __init__.py  cli.py  data_utils.py  io_utils.py  metrics.py  visualization.py
tests/: conftest.py  pytest.ini  run_tests.py  test_integration.py
tests/test_advanced/: test_gan_utils.py
tests/test_computer_vision/: test_transforms.py
tests/test_fundamentals/: test_tensor_ops.py
tests/test_neural_networks/: test_models.py
tests/test_nlp/: test_tokenization.py
tests/test_utils/: test_data_utils.py  test_visualization.py
